...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.769" />

        <EditText
            android:id="@+id/search_field"
            android:layout_width="333dp"
            android:layout_height="44dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="Название фильма"
            android:inputType="text"
...
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.111" />

        <Button
            android:id="@+id/search_button"
            style="?attr/borderlessButtonStyle"
            android:layout_width="57dp"
            android:layout_height="44dp"
            app:backgroundTint="@color/white"
            app:icon="@drawable/search2"
            app:iconGravity="textStart"
...
