...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="350dp"
            android:layout_height="69dp"
            android:fontFamily="casual"
            android:text="название"
            android:textSize="18sp"
            android:textStyle="bold"
...
